# ncp

./: .gitignore  README.md  meson.build
src/: main.cpp
